--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -188,6 +188,7 @@ OSTree:
           - openstack/rhel-8.5-devel-x86_64
           - openstack/rhel-8.6-nightly-x86_64
           - openstack/rhel-9.0-beta-nightly-x86_64
+          - openstack/centos-stream-8-x86_64
 
 New OSTree:
   stage: test
@@ -200,6 +201,7 @@ New OSTree:
       - RUNNER:
           - openstack/rhel-8.5-x86_64-large
           - openstack/rhel-8.6-nightly-x86_64-large
+          - openstack/centos-stream-8-x86_64
 
 New OSTree (RHEL9-BETA):
   stage: test
@@ -223,6 +225,7 @@ OSTree simplified installer:
       - RUNNER:
           - openstack/rhel-8.5-x86_64-large
           - openstack/rhel-8.6-nightly-x86_64-large
+          - openstack/centos-stream-8-x86_64
 
 OSTree raw image:
   stage: test
@@ -235,6 +238,7 @@ OSTree raw image:
       - RUNNER:
           - openstack/rhel-8.5-devel-x86_64
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/centos-stream-8-x86_64
 
 .INTEGRATION_TESTS: &INTEGRATION_TESTS
   SCRIPT:
