worker: Configurable timeout for RequestJob
This is backwards compatible, as long as the timeout is 0 (never
timeout), which is the default.

In case of the dbjobqueue the underlying timeout is due to
context.Canceled, context.DeadlineExceeded, or net.Error with Timeout()
true. For the fsjobqueue only the first two are considered.

--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -175,6 +175,7 @@ objects:
       jwt_keys_url = "${SSO_BASE_URL}/protocol/openid-connect/certs"
       jwt_acl_file = "${COMPOSER_CONFIG_DIR}/acl.yml"
       [worker]
+      request_job_timeout = "20s"
       base_path = "/api/image-builder-worker/v1"
       enable_tls = false
       enable_mtls = false
