--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,13 @@ stages:
 .terraform:
   after_script:
     - schutzbot/update_github_status.sh update
-    - schutzbot/save_journal.sh
+#     - schutzbot/save_journal.sh
     - schutzbot/run_cloud_cleaner.sh
   tags:
     - terraform
   artifacts:
     paths:
-      - journal-log
+      # - journal-log
       - ci-artifacts
     when: always
 
@@ -33,7 +33,7 @@ RPM:
     - sh "schutzbot/mockbuild.sh"
   after_script:
     - schutzbot/update_github_status.sh update
-    - schutzbot/save_journal.sh
+#     - schutzbot/save_journal.sh
   parallel:
     matrix:
       - RUNNER:
