CI: enable tests for RHEL 9.0

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,8 @@ RPM:
       - RUNNER:
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-8.6-nightly-aarch64
+          - aws/rhel-9.0-nightly-x86_64
+          - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Container:
@@ -123,6 +125,8 @@ Base:
       - RUNNER:
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-8.6-nightly-aarch64
+          - aws/rhel-9.0-nightly-x86_64
+          - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -152,6 +156,8 @@ Regression:
           - aws/rhel-8.4-ga-aarch64
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-8.6-nightly-aarch64
+          - aws/rhel-9.0-nightly-x86_64
+          - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -176,6 +182,7 @@ OSTree:
           # - openstack/fedora-34-x86_64
           - openstack/rhel-8.4-ga-x86_64
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/rhel-9.0-nightly-x86_64
           - openstack/centos-stream-8-x86_64
 
 New OSTree:
@@ -188,6 +195,7 @@ New OSTree:
     matrix:
       - RUNNER:
           - openstack/rhel-8.6-nightly-x86_64-large
+          - openstack/rhel-9.0-nightly-x86_64-large
           - openstack/centos-stream-8-x86_64
 
 OSTree simplified installer:
@@ -250,6 +258,7 @@ Integration:
         RUNNER:
           - aws/rhel-8.4-ga-x86_64
           - aws/rhel-8.6-nightly-x86_64
+          - aws/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
           - azure_hyperv_gen2.sh
@@ -292,6 +301,7 @@ API:
         RUNNER:
           - aws/rhel-8.4-ga-x86_64
           - aws/rhel-8.6-nightly-x86_64
+          - aws/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 libvirt:
@@ -311,6 +321,7 @@ libvirt:
       - RUNNER:
           - openstack/rhel-8.4-ga-x86_64
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 RHEL 9 on 8:
@@ -358,6 +369,7 @@ Installer:
     matrix:
       - RUNNER:
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/rhel-9.0-nightly-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
