CI: enable tests for RHEL 9.0

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,8 @@ RPM:
       - RUNNER:
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-8.6-nightly-aarch64
+          - aws/rhel-9.0-nightly-x86_64
+          - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Container:
@@ -120,6 +122,8 @@ Base:
       - RUNNER:
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-8.6-nightly-aarch64
+          - aws/rhel-9.0-nightly-x86_64
+          - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -149,6 +153,8 @@ Regression:
           - aws/rhel-8.4-ga-aarch64
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-8.6-nightly-aarch64
+          - aws/rhel-9.0-nightly-x86_64
+          - aws/rhel-9.0-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
   artifacts:
     paths:
@@ -173,6 +179,7 @@ OSTree:
           # - openstack/fedora-34-x86_64
           - openstack/rhel-8.4-ga-x86_64
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/rhel-9.0-nightly-x86_64
           - openstack/centos-stream-8-x86_64
 
 New OSTree:
@@ -185,6 +192,7 @@ New OSTree:
     matrix:
       - RUNNER:
           - openstack/rhel-8.6-nightly-x86_64-large
+          - openstack/rhel-9.0-nightly-x86_64-large
           - openstack/centos-stream-8-x86_64
 
 OSTree simplified installer:
@@ -247,6 +255,7 @@ Integration:
         RUNNER:
           - aws/rhel-8.4-ga-x86_64
           - aws/rhel-8.6-nightly-x86_64
+          - aws/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
           - azure_hyperv_gen2.sh
@@ -289,6 +298,7 @@ API:
         RUNNER:
           - aws/rhel-8.4-ga-x86_64
           - aws/rhel-8.6-nightly-x86_64
+          - aws/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 libvirt:
@@ -308,6 +318,7 @@ libvirt:
       - RUNNER:
           - openstack/rhel-8.4-ga-x86_64
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/rhel-9.0-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
 RHEL 9 on 8:
@@ -355,6 +366,7 @@ Installer:
     matrix:
       - RUNNER:
           - openstack/rhel-8.6-nightly-x86_64
+          - openstack/rhel-9.0-nightly-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
