--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -207,6 +207,8 @@ objects:
       enable_jwt = true
       jwt_keys_url = "${SSO_BASE_URL}/protocol/openid-connect/certs"
       jwt_acl_file = "${COMPOSER_CONFIG_DIR}/acl.yml"
+      [koji.aws_config]
+      bucket = "imagebuilder.service.staging"
       [worker]
       request_job_timeout = "20s"
       base_path = "/api/image-builder-worker/v1"
