distro/rhel90: disable edge-simplified-installer image type
Critical dependency is not available yet

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -206,7 +206,8 @@ OSTree simplified installer:
       - RUNNER:
           - openstack/rhel-8.6-nightly-x86_64-large
           - openstack/centos-stream-8-x86_64
-          - openstack/rhel-9.0-nightly-x86_64
+          # NOTE: coreos-installer not yet available in RHEL 9.0
+          # - openstack/rhel-9.0-nightly-x86_64
 
 OSTree raw image:
   stage: test
