templates: Add prometheus scrape annotations to composer-api

--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -165,6 +165,9 @@ objects:
     labels:
       app: composer
       port: composer-api
+    annotations:
+      prometheus.io/path: /metrics
+      prometheus.io/scrape: 'true'
   spec:
     ports:
       - name: composer-api
