--- a/.packit.yaml
+++ b/.packit.yaml
@@ -9,6 +9,8 @@ synced_files:
 upstream_package_name: osbuild-composer
 downstream_package_name: osbuild-composer
 
+copy_upstream_release_description: true
+
 upstream_tag_template: v{version}
 
 actions:
