--- a/distribution/Dockerfile-worker
+++ b/distribution/Dockerfile-worker
@@ -4,6 +4,7 @@ ENV GOFLAGS=-mod=vendor
 RUN go install ./cmd/osbuild-worker
 
 FROM fedora
+RUN dnf update -y && dnf upgrade -y
 RUN dnf install -y qemu-img osbuild osbuild-ostree
 RUN mkdir -p "/usr/libexec/osbuild-composer"
 RUN mkdir -p "/etc/osbuild-composer/"
