schutzbot: introduce packer builds
Every schutzbot run will now build an AMI image that contains the worker.
The composer RPM is taken from the mockbuild phase. The osbuild version
is taken from Schutzfile for RHEL 8 GA.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,6 +83,16 @@ Container:
       - RUNNER:
           - aws/fedora-33-x86_64
 
+Packer:
+  stage: test
+  extends: .terraform
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "schedule"'
+  script:
+    - schutzbot/packer.sh
+  variables:
+    RUNNER: aws/centos-stream-8-x86_64
+
 Prepare-rhel-internal:
   stage: prepare-rhel-internal
   extends: .terraform
