dnf-json: Change dnf-json to be a daemon
The service is started via systemd activation sockets.
The service serves http POST requests, the same json as before is
expected as the body of the request, and the same json as before is sent
as the response of the request.

--- a/distribution/osbuild-composer.service
+++ b/distribution/osbuild-composer.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=OSBuild Composer
+Requires=osbuild-dnf-json.socket
 After=network.target
 
 # Weldr API needs a local worker by default.
