packer/monit: remove verify_worker_connection
This is currently not working because workers in aoc no longer use mTLS.
Definitely something we want to fix in the future I think.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/templates/packer/ansible/roles/common/tasks/monitoring.yml
+++ b/templates/packer/ansible/roles/common/tasks/monitoring.yml
@@ -15,11 +15,8 @@
 
 - name: Deploy monit scripts
   copy:
-    src: "monit_scripts/{{ item }}"
+    src: monit_scripts/pozorbot_alert
     dest: /opt/monit/
     mode: "0755"
     owner: root
     group: root
-  loop:
-    - pozorbot_alert
-    - verify_worker_connection
