packer: remove forwarding to console
Console support in AWS EC2 is very basic. We now use vector that works much
better than console so we can just drop the forwarding and rely on vector
dumping the logs into cloudwatch.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/templates/packer/ansible/roles/common/tasks/main.yml
+++ b/templates/packer/ansible/roles/common/tasks/main.yml
@@ -3,7 +3,7 @@
 # Install various software packages.
 - include_tasks: packages.yml
 
-# Set systemd/journald overrides
+# Set systemd overrides
 - include_tasks: systemd.yml
 
 # Configure monitoring.
