packer: install just osbuild-composer-worker
We don't actually need a composer in these images, so let's just install
the worker.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/templates/packer/ansible/roles/common/tasks/packages.yml
+++ b/templates/packer/ansible/roles/common/tasks/packages.yml
@@ -42,7 +42,7 @@
   package:
     name:
       - jq
-      - osbuild-composer
+      - osbuild-composer-worker
       - unzip
       - monit
       - vector
