golangci: enable gosec in golangci
gosec is a security tools for golang. This change enables this tools
inside golangci-lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,10 +3,15 @@ linters-settings:
     disable:
       - shadow # default value recommended by golangci
       - composites
+  
+linters:
+  enable:
+    - gosec
 
 run:
   build-tags:
     - integration
+  timeout: 5m
 
 issues:
   # Maximum issues count per one linter. Set to 0 to disable. Default is 50.
