--- a/.github/workflows/coverity_scan.yml
+++ b/.github/workflows/coverity_scan.yml
@@ -19,6 +19,9 @@ jobs:
           COVERITY_SCAN_TOKEN: ${{ secrets.COVERITY_SCAN_TOKEN }}
           COVERITY_SCAN_EMAIL: ${{ secrets.COVERITY_SCAN_EMAIL }}
         run: |
+          sudo apt-get update
+          sudo apt-get install -y libkrb5-dev
+
           echo "Downloading coverity scan package."
           curl -o /tmp/cov-analysis-linux64.tgz https://scan.coverity.com/download/linux64 \
             --form project="$COVERITY_SCAN_PROJECT_NAME" \
