templates: Max concurrent requests is required for the maintenance job

--- a/templates/composer.yml
+++ b/templates/composer.yml
@@ -276,6 +276,8 @@ objects:
                 value: "${PGSSLMODE}"
               - name: DRY_RUN
                 value: "${MAINTENANCE_DRY_RUN}"
+              - name: MAX_CONCURRENT_REQUESTS
+                value: "${MAINTENANCE_MAX_CONCURRENT_REQUESTS}"
 
 parameters:
   - description: composer image name
@@ -334,4 +336,8 @@ parameters:
     name: MAINTENANCE_DRY_RUN
     # don't change this value, overwrite it in app-interface for a specific namespace
     value: "true"
+    required: true
+  - description: composer-maintenance max concurrent requests
+    name: MAINTENANCE_MAX_CONCURRENT_REQUESTS
+    value: "10"
     required: true
