ci: switch 8.5 runner to ga and bump terraform config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,8 +50,8 @@ RPM:
   parallel:
     matrix:
       - RUNNER:
-          - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
+          - aws/rhel-8.5-ga-x86_64
+          - aws/rhel-8.5-ga-aarch64
           - aws/rhel-9.0-beta-nightly-x86_64
           - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
@@ -74,7 +74,7 @@ Prepare-rhel-internal:
       - RUNNER:
           # NOTE: 1 runner prepares for all arches b/c subsequent jobs download
           # artifacts from all previous jobs and the last one wins
-          - aws/rhel-8.5-x86_64
+          - aws/rhel-8.5-ga-x86_64
         INTERNAL_NETWORK: ["true"]
 
 Base:
@@ -89,8 +89,8 @@ Base:
   parallel:
     matrix:
       - RUNNER:
-          - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
+          - aws/rhel-8.5-ga-x86_64
+          - aws/rhel-8.5-ga-aarch64
           - aws/rhel-9.0-beta-nightly-x86_64
           - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
@@ -112,8 +112,8 @@ Regression:
   parallel:
     matrix:
       - RUNNER:
-          - aws/rhel-8.5-x86_64
-          - aws/rhel-8.5-aarch64
+          - aws/rhel-8.5-ga-x86_64
+          - aws/rhel-8.5-ga-aarch64
           - aws/rhel-9.0-beta-nightly-x86_64
           - aws/rhel-9.0-beta-nightly-aarch64
         INTERNAL_NETWORK: ["true"]
@@ -135,7 +135,7 @@ OSTree:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64
+          - openstack/rhel-8.5-ga-x86_64
           - openstack/rhel-9.0-beta-nightly-x86_64
 
 New OSTree:
@@ -147,7 +147,7 @@ New OSTree:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64-large
+          - openstack/rhel-8.5-ga-x86_64-large
 
 New OSTree (RHEL9-BETA):
   stage: test
@@ -169,7 +169,7 @@ OSTree simplified installer:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64-large
+          - openstack/rhel-8.5-ga-x86_64-large
 
 OSTree raw image:
   stage: test
@@ -180,7 +180,7 @@ OSTree raw image:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64
+          - openstack/rhel-8.5-ga-x86_64
 
 .INTEGRATION_TESTS: &INTEGRATION_TESTS
   SCRIPT:
@@ -204,12 +204,12 @@ Integration:
     matrix:
       - <<: *INTEGRATION_TESTS
         RUNNER:
-          - aws/rhel-8.5-x86_64
+          - aws/rhel-8.5-ga-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
           - azure_hyperv_gen2.sh
         RUNNER:
-          - aws/rhel-8.5-x86_64
+          - aws/rhel-8.5-ga-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
           - aws.sh
@@ -239,7 +239,7 @@ API:
     matrix:
       - <<: *API_TESTS
         RUNNER:
-          - aws/rhel-8.5-x86_64
+          - aws/rhel-8.5-ga-x86_64
           - aws/rhel-9.0-beta-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
@@ -255,7 +255,7 @@ libvirt:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64
+          - openstack/rhel-8.5-ga-x86_64
           - openstack/rhel-9.0-beta-nightly-x86_64
         INTERNAL_NETWORK: ["true"]
 
@@ -290,7 +290,7 @@ Installer:
   parallel:
     matrix:
       - RUNNER:
-          - openstack/rhel-8.5-x86_64
+          - openstack/rhel-8.5-ga-x86_64
           - openstack/rhel-9.0-beta-nightly-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
